// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chop Logic Icons > ArrowDownIcon should match the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M21.886 5.536A1.002 1.002 0 0021 5H3a1.002 1.002 0 00-.822 1.569l9 13a.998.998 0 001.644 0l9-13a.998.998 0 00.064-1.033zM12 17.243L4.908 7h14.184L12 17.243z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Chop Logic Icons > ArrowUpIcon should match the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M3 19h18a1.002 1.002 0 00.823-1.569l-9-13c-.373-.539-1.271-.539-1.645 0l-9 13A.999.999 0 003 19zm9-12.243L19.092 17H4.908L12 6.757z"
    />
  </svg>
</DocumentFragment>
`;

exports[`Chop Logic Icons > BackIcon should match the snapshot 1`] = `
<DocumentFragment>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 512 512"
    width="1em"
  >
    <path
      d="M328 112L184 256l144 144"
      fill="none"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="48"
    />
  </svg>
</DocumentFragment>
`;
